--- a/index.html
+++ b/index.html
@@ -31,48 +31,69 @@
             <br><br>
             <div style="text-align: center;">
                 <img src="imgs/placeHolder.png" width="200" height="200">
-              </div>
-            <div id="hello">
-                <h1 class="bigtext">Hello! Welcome to ParadoxStudio</h1>
-                <h1>We're small Video Games Studio with new vision for games.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Curabitur hendrerit leo eu imperdiet pellentesque. 
-                    Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio.</h1>
             </div>
-            <div id="whyus">
-                <h1 class="bigtext">Why you should play our games?</h1>
-                <div id="reasonswhy">
-                    <div class="row">
-                        <!-- Our Games are (will be) Free -->
-                        <div id="reasonfree" class="column">
-                            <h1><a href="https://www.gnu.org/philosophy/free-sw.html">Free As In Freedom</a></h1>
-                            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Curabitur hendrerit leo eu imperdiet pellentesque. 
-                                Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
-                                Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
-                                Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
-                                Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
-                        </div>
-                        <!-- Our Games are (will be) Open Source -->
-                        <div id="reasonopensource" class="column">
-                            <h1>Open Source</h1>
-                            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Curabitur hendrerit leo eu imperdiet pellentesque. 
-                                Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
-                                Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
-                                Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
-                                Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
-                        </div>
-                        <!-- We're trying to build community -->
-                        <div id="reasoncommunity" class="column">
-                            <h1>Building a Community</h1>
-                            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Curabitur hendrerit leo eu imperdiet pellentesque. 
-                                Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
-                                Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
-                                Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
-                                Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
-                        </div>
+
+            <div id="hello">
+                <h1 class="bigtext">Welcome to ParadoxStudio</h1>
+                <h1>An Indie Game Studio</h1>
+            </div>
+
+            <div id="ourgames">
+                <h1 class="bigtext">Our Games:</h1>
+                <div id="games" class="center">
+                    <div class="game">
+                        <img class="gameimg" src="imgs/placeHolder.png" alt="Game #1">
+                        <h4>Game #1</h4>
+                        <p>Description</p>
+                    </div>
+                    <div class="game">
+                        <img class="gameimg" src="imgs/placeHolder.png" alt="Game #2">
+                        <h4>Game #2</h4>
+                        <p>Description</p>
+                    </div>
+                    <div class="game">
+                        <img class="gameimg" src="imgs/placeHolder.png" alt="Game #3">
+                        <h4>Game #3</h4>
+                        <p>Description</p>
+                    </div>
+                </div>
+                <div class="center">
+                    <a href="#games"><button class="button">More Games</button></a>
+                </div>
+            </div>
+
+            <div id="reasonswhy">
+                <h1 class="bigtext">Why us?</h1>
+                <div class="row3">
+                    <!-- Our Games are (will be) Free -->
+                    <div id="rfree" class="column3">
+                        <h1><a class="link" href="https://www.gnu.org/philosophy/free-sw.html">Free As In Freedom</a></h1>
+                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Curabitur hendrerit leo eu imperdiet pellentesque. 
+                            Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
+                            Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
+                            Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
+                            Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
+                    </div>
+                    <!-- Our Games are (will be) Open Source -->
+                    <div id="ropensource" class="column3">
+                        <h1>Open Source</h1>
+                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Curabitur hendrerit leo eu imperdiet pellentesque. 
+                            Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
+                            Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
+                            Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
+                            Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
+                    </div>
+                    <!-- We're trying to build community -->
+                    <div id="rcommunity" class="column3">
+                        <h1>Building a Community</h1>
+                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Curabitur hendrerit leo eu imperdiet pellentesque. 
+                            Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
+                            Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
+                            Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
+                            Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
                     </div>
                 </div>
             </div>
