Some small changes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div id="hello">
                 <h1 class="bigtext">Welcome to ParadoxStudio</h1>
                 <h1>An Indie Game Studio</h1>
+                <h2>(more soon)</h2>
             </div>
 
             <div id="ourgames">
@@ -77,7 +78,7 @@
                     </div>
                     <!-- Our Games are (will be) Open Source -->
                     <div id="ropensource" class="column3">
-                        <h1>Open Source</h1>
+                        <h1><a class="link" href="https://opensource.com/resources/what-open-source">Open Source</a></h1>
                         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Curabitur hendrerit leo eu imperdiet pellentesque. 
                             Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
