--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap" rel="stylesheet">
 
-        <meta name="keywords" content="AndusDEV, Andus, Java">
-        <meta name="description" content="Main Page of Andus's Website">
+        <meta name="keywords" content="AndusDEV, Andus, ParadoxStudio, Paradox">
+        <meta name="description" content="Homepage of ParadoxStudio">
         <meta name="author" content="Andus">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -43,9 +43,11 @@
                 <h1 class="bigtext">Our Games:</h1>
                 <div id="games" class="center">
                     <div class="game">
-                        <img class="gameimg" src="imgs/placeHolder.png" alt="Game #1">
-                        <h4>Game #1</h4>
-                        <p>Description</p>
+                        <a href="./games/cardgame/index.html">
+                            <img class="gameimg" src="imgs/placeHolder.png" alt="Card Game">
+                            <h4>Card Game</h4>
+                        </a>
+                        <p>Soon</p>
                     </div>
                     <div class="game">
                         <img class="gameimg" src="imgs/placeHolder.png" alt="Game #2">
