Some small phone and design changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="bigtext">Our Games:</h1>
                 <div id="games" class="center">
                     <div class="game">
-                        <a href="./games/cardgame/index.html">
+                        <a href="./games/cardgame">
                             <img class="gameimg" src="imgs/placeHolder.png" alt="Card Game">
                             <h4>Card Game</h4>
                         </a>
