--- a/games/cardgame/index.html
+++ b/games/cardgame/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@200;700&display=swap" rel="stylesheet">
 
+    <meta name="author" content="Andus">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta property="og:type" content="website">
     <meta property="og:title" content="ParadoxStudio"/>
     <meta property="og:description" content="Homepage of Card Game"/>
