Updating the main Website

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="hello">
                 <h1 class="bigtext">Welcome to ParadoxStudio</h1>
                 <h1>An Indie Game Studio</h1>
-                <h2>(more soon)</h2>
+                <h2>(Website still in works)</h2>
             </div>
 
             <div id="ourgames">
@@ -71,32 +71,25 @@
                     <!-- Our Games are (will be) Free -->
                     <div id="rfree" class="column3">
                         <h1><a class="link" href="https://www.gnu.org/philosophy/free-sw.html">Free As In Freedom</a></h1>
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Curabitur hendrerit leo eu imperdiet pellentesque. 
-                            Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
-                            Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
-                            Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
-                            Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
+                        <h2>We aim to create a complete and free games. Even better.
+                            All the content in our games (textures, etc.) can be used by you in any way you want.
+                            Just give us some credit ;).</h2>
                     </div>
                     <!-- Our Games are (will be) Open Source -->
                     <div id="ropensource" class="column3">
-                        <h1><a class="link" href="https://opensource.com/resources/what-open-source">Open Source</a></h1>
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Curabitur hendrerit leo eu imperdiet pellentesque. 
-                            Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
-                            Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
-                            Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
-                            Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
+                        <h1><a class="link" href="https://opensource.org/osd">Open Source</a></h1>
+                        <h2>All of our games are Open Source.
+                            That means you can change in them anything you want.
+                            Well... Anything that's legal.
+                            Just follow the <a class="link" href="https://opensource.org/licenses">Licence</a> (every game has their own) restrictions and you'll be fine.</h2>
                     </div>
                     <!-- We're trying to build community -->
                     <div id="rcommunity" class="column3">
                         <h1>Building a Community</h1>
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Curabitur hendrerit leo eu imperdiet pellentesque. 
-                            Morbi semper porttitor elementum. Nunc eget augue a nibh ultrices tincidunt quis nec odio. 
-                            Curabitur commodo urna risus, non laoreet diam rhoncus ac. Morbi rutrum convallis euismod. 
-                            Sed ex nulla, scelerisque a tellus in, pulvinar placerat eros. 
-                            Proin sagittis ante a viverra ullamcorper. Maecenas at tempor diam.</h2>
+                        <h2>We try to build a Coummunity. If you want to help, 
+                            just join our <a class="link" href="#">Discord</a> and be yourself.
+                            We accept everyone here.
+                            (just follow the rules please).</h2>
                     </div>
                 </div>
             </div>
