--- a/games/cardgame/index.html
+++ b/games/cardgame/index.html
@@ -17,29 +17,40 @@
   </head>
 
   <body>
-    <div class="center" id="thumbnail">
-      <h1>Card Game (Name soon)</h1>
-      <br>
-    </div>
-    <div class="center" id="menu">
-      <!-- Home -->
-      <a href="./index.html" alt="Home">
-        <img class="card cardHome" src="../imgs/CardHome.png"/>
-      </a>
-
-      <!-- About -->
-      <a href="#" alt="About">
-        <img class="card cardAbout" src="../imgs/CardAbout.png"/>
-      </a>
-
-      <!-- Screenshots -->
-      <a href="#" alt="Screenshots">
-        <img class="card cardShots" src="../imgs/CardShots.png"/>
-      </a>
-    </div>
-    <div id="main">
-      <div class="centerer" id="someday">
-        <h2 class="notready">Website not ready!</h2>
+    <div id="bg">
+      <div class="center" id="thumbnail">
+        <h1>Card Game (Name soon)</h1>
+        <br>
+      </div>
+      <div class="center" id="menu">
+        <!-- Home -->
+        <a href="./index.html" alt="Home">
+          <img class="card cardHome" src="./imgs/menu/CardHome.png"/>
+        </a>
+  
+        <!-- About -->
+        <a href="#" alt="About">
+          <img class="card cardAbout" src="./imgs/menu/CardAbout.png"/>
+        </a>
+  
+        <!-- Screenshots -->
+        <a href="#" alt="Screenshots">
+          <img class="card cardShots" src="./imgs/menu/CardShots.png"/>
+        </a>
+      </div>
+      <div id="main">
+        <div class="centerer" id="someday">
+          <h2 class="notready">Website not ready!</h2>
+        </div>
+        <!-- Desk of cards (not working)
+        <div class="desk" id="desk">
+          <img class="desk" src="./imgs/bg/desk.png" />
+          <img class="dcard card1" src="./imgs/cards/CardBlue.png" />
+          <img class="dcard card2" src="./imgs/cards/CardRed.png" />
+          <img class="dcard card3" src="./imgs/cards/CardYellow.png" />
+          <img class="dcard card4" src="./imgs/cards/CardGreen.png" />
+        </div>
+        -->
       </div>
     </div>
   </body>
