--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <img class="gameimg" src="imgs/placeHolder.png" alt="Card Game">
                             <h4>Card Game</h4>
                         </a>
-                        <p>Soon</p>
+                        <p>A TCG Game</p>
                     </div>
                     <div class="game">
                         <img class="gameimg" src="imgs/placeHolder.png" alt="Game #2">
@@ -61,6 +61,43 @@
                 </div>
                 <div class="center">
                     <a href="#games"><button class="button">More Games</button></a>
+                </div>
+            </div>
+
+            <div id="tools">
+                <h1 class="bigtext">Tools we use:</h1>
+                <h2>We use tools you're already familliar with.</h2>
+                <div class="center">
+                    <div id="engines" class="row">
+                        <h1><a class="link" href="https://wikipedia.org/wiki/Game_engine">Engines:</a></h1>
+                        <div id="engine-godot" class="column">
+                            <a href="https://godotengine.org/">
+                                <img src="./imgs/tools/godot_logo_monochrome.svg" height="100"/>
+                                <h2>Godot</h2>
+                            </a>
+                        </div>
+                        <div id="engine-unity" class="column">
+                            <a href="https://unity.com/">
+                                <img src="./imgs/tools/unity_logo_white.svg" height="100"/>
+                                <h2>Unity</h2>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="art" class="row">
+                        <h1><a class="link" href="https://en.wikipedia.org/wiki/Graphics_software">Art Tools:</a></h1>
+                        <div id="pixel-libresprite" class="column">
+                            <a href="https://libresprite.github.io/">
+                                <img src="./imgs/tools/libresprite_logo_normal.png" height="100" />
+                                <h2>LibreSprite</h2>
+                            </a>
+                        </div>
+                        <div id="art-gimp" class="column">
+                            <a href="https://www.gimp.org/">
+                                <img src="./imgs/tools/gimp_logo_white.png" height="100"/>
+                                <h2>GIMP</h2>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
