Added real Discord link

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div id="rcommunity" class="column3">
                         <h1>Building a Community</h1>
                         <h2>We try to build a Coummunity. If you want to help, 
-                            just join our <a class="link" href="#">Discord</a> and be yourself.
+                            just join our <a class="link" href="https://discord.gg/Jc22Ty7trq">Discord</a> and be yourself.
                             We accept everyone here.
                             (just follow the rules please).</h2>
                     </div>
