--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                 <div id="games" class="center">
                     <div class="game">
                         <a href="./games/cardgame">
-                            <img class="gameimg" src="imgs/placeHolder.png" alt="Card Game">
+                            <div class="gameimg cardgameimg">
+                                <img class="cardgameimg gameimg-main" src="games/cardgame/imgs/cards/CardYellow.png" alt="Card Game">
+                                <img class="cardgameimg gameimg-hover cardgameimg1-hover" src="games/cardgame/imgs/cards/CardRed.png" alt="Card Game">
+                                <img class="cardgameimg gameimg-hover cardgameimg2-hover" src="games/cardgame/imgs/cards/CardBlue.png" alt="Card Game">
+                            </div>
                             <h4>Card Game</h4>
                         </a>
                         <p>A TCG Game</p>
