remove cards on hover

--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
                 <div id="games" class="center">
                     <div class="game">
                         <a href="./games/cardgame">
-                            <div class="gameimg cardgameimg">
-                                <img class="cardgameimg gameimg-main" src="games/cardgame/imgs/cards/CardYellow.png" alt="Card Game">
-                                <img class="cardgameimg gameimg-hover cardgameimg1-hover" src="games/cardgame/imgs/cards/CardRed.png" alt="Card Game">
-                                <img class="cardgameimg gameimg-hover cardgameimg2-hover" src="games/cardgame/imgs/cards/CardBlue.png" alt="Card Game">
+                            <div class="gameimg">
+                                <img class="cardgameimg" src="games/cardgame/imgs/cards/CardYellow.png" alt="Card Game">
                             </div>
                             <h4>Card Game</h4>
                         </a>
