--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                         <h2>All of our games are Open Source.
                             That means you can change in them anything you want.
                             Well... Anything that's legal.
-                            Just follow the <a class="link" href="https://opensource.org/licenses">Licence</a> (every game has their own) restrictions and you'll be fine.</h2>
+                            Just follow the <a class="link" href="https://opensource.org/licenses">License</a> restrictions and you'll be fine.
+                            Most of our games use the <a class="link" href="https://choosealicense.com/licenses/mit/">MIT License</a>.</h2>
                     </div>
                     <!-- We're trying to build community -->
                     <div id="rcommunity" class="column3">
