Added PatchKit Badge

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                             </a>
                         </div>
                     </div>
+                    <div id="launcher">
+                        <h1><a class="link" href="./definitions/index.html#launcher">Launcher Tools:</a></h1>
+                        <div id="patchkit">
+                            <a href="https://patchkit.net/">
+                                <img src="./imgs/tools/patchkit_logo_white.png" height="100" />
+                                <h2>PatchKit</h2>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
