--- a/games/cardgame/index.html
+++ b/games/cardgame/index.html
@@ -42,6 +42,9 @@
         <div class="centerer" id="someday">
           <h2 class="notready">Website not ready!</h2>
         </div>
+        <div class="centerer" id="someday">
+          <h2 class="notready">Game Abandoned for now!</h2>
+        </div>
         <!-- Desk of cards (not working)
         <div class="desk" id="desk">
           <img class="desk" src="./imgs/bg/desk.png" />
