--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                             </div>
                             <h4>Card Game</h4>
                         </a>
-                        <p>A TCG Game</p>
+                        <p>A TCG Game (abandoned FOR NOW)</p>
                     </div>
                     <div class="game">
-                        <img class="gameimg" src="imgs/placeHolder.png" alt="Game #2">
-                        <h4>Game #2</h4>
-                        <p>Description</p>
+                        <img class="gameimg" src="imgs/placeHolder.png" alt="Project P">
+                        <h4>Project P</h4>
+                        <p>A great Platformer Game with great story</p>
                     </div>
                     <div class="game">
                         <img class="gameimg" src="imgs/placeHolder.png" alt="Game #3">
@@ -143,4 +143,9 @@
             </div>
         </div>
     </body>
+    <footer>
+        <br><br>
+        <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio/prdxstudio.github.io">Website Source Code</a></h2>
+        <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio">GitHub</a></h2>
+    </footer>
 </html>
