Added Project Evie as a Link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="main">
             <br><br>
             <div style="text-align: center;">
-                <img src="imgs/placeHolder.png" width="200" height="200">
+                <img src="imgs/Logo.png" width="256" height="96">
             </div>
 
             <div id="hello">
@@ -48,12 +48,14 @@
                             </div>
                             <h4>Card Game</h4>
                         </a>
-                        <p>A TCG Game (abandoned FOR NOW)</p>
+                        <p>A TCG Game </br>(abandoned FOR NOW)</p>
                     </div>
                     <div class="game">
-                        <img class="gameimg" src="imgs/placeHolder.png" alt="Project P">
-                        <h4>Project P</h4>
-                        <p>A great Platformer Game with great story</p>
+                        <a href="https://gamejolt.com/games/projectevie/699766">
+                            <img src="imgs/Evie.png" alt="Project Evie" width="132" height="132">
+                            <h4>Project Evie</h4>
+                        </a>
+                        <p>A great Platformer </br>with great story</p>
                     </div>
                     <div class="game">
                         <img class="gameimg" src="imgs/placeHolder.png" alt="Game #3">
