--- a/games/cardgame/index.html
+++ b/games/cardgame/index.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="ParadoxStudio"/>
+    <meta property="og:title" content="LonelyPie"/>
     <meta property="og:description" content="Homepage of Card Game"/>
-    <meta property="og:url" content="https://paradox.andus.dev/games/cardgame"/>
+    <meta property="og:url" content="https://lpie.andus.dev/games/cardgame"/>
   </head>
 
   <body>
