--- a/index.html
+++ b/index.html
@@ -10,32 +10,30 @@
         <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap" rel="stylesheet">
 
-        <meta name="keywords" content="AndusDEV, Andus, ParadoxStudio, Paradox">
-        <meta name="description" content="Homepage of ParadoxStudio">
+        <meta name="keywords" content="AndusDEV, Andus, ParadoxStudio, Paradox, LonelyPie, Lonely Pie">
+        <meta name="description" content="Homepage of LonelyPie">
         <meta name="author" content="Andus">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <meta property="og:type" content="website">
-        <meta property="og:title" content="ParadoxStudio"/>
-        <meta property="og:description" content="Homepage of ParadoxStudio"/>
+        <meta property="og:title" content="LonelyPie"/>
+        <meta property="og:description" content="Homepage"/>
         <meta property="og:url" content="https://paradox.andus.dev"/>
     </head>
 
     <body>
-        <div class="topnav">
-            <!-- Someday -->
+        <div class="nav">
+            <a class="active" href="/#main">Home</a>
+            <a href="/team">Team</a>
         </div>
-
-        <div class="main">
+        <div class="main" id="main">
             <br><br>
             <div style="text-align: center;">
-                <img src="imgs/Logo.png" width="256" height="96">
+                <a href="/"><img class="logo" src="imgs/Logo.png"></a>
             </div>
 
             <div id="hello">
-                <h1 class="bigtext">Welcome to ParadoxStudio</h1>
-                <h1>An Indie Game Studio</h1>
-                <h2>(Website still in works)</h2>
+                <h1>Indie Game Studio</h1>
             </div>
 
             <div id="ourgames">
@@ -43,14 +41,11 @@
                 <div id="games" class="center">
                     <div class="game">
                         <a href="https://gamejolt.com/games/projectevie/699766">
-                            <img src="imgs/Evie.png" alt="Project Evie" width="132" height="132">
+                            <img class="game" src="imgs/Evie.png" alt="Project Evie">
                             <h4>Project Evie</h4>
                         </a>
                         <p>A great Platformer </br>with great story</p>
                     </div>
-                </div>
-                <div class="center">
-                    <a href="#games"><button class="button">More Games</button></a>
                 </div>
             </div>
 
@@ -62,13 +57,13 @@
                         <h1><a class="link" href="https://wikipedia.org/wiki/Game_engine">Engines:</a></h1>
                         <div id="engine-godot" class="column">
                             <a href="https://godotengine.org/">
-                                <img src="./imgs/tools/godot_logo_monochrome.svg" height="100"/>
+                                <img src="./imgs/tools/godot_logo_monochrome.svg" height="75"/>
                                 <h2>Godot</h2>
                             </a>
                         </div>
                         <div id="engine-unity" class="column">
                             <a href="https://unity.com/">
-                                <img src="./imgs/tools/unity_logo_white.svg" height="100"/>
+                                <img src="./imgs/tools/unity_logo_white.svg" height="75"/>
                                 <h2>Unity</h2>
                             </a>
                         </div>
@@ -77,13 +72,13 @@
                         <h1><a class="link" href="https://en.wikipedia.org/wiki/Graphics_software">Art Tools:</a></h1>
                         <div id="pixel-libresprite" class="column">
                             <a href="https://libresprite.github.io/">
-                                <img src="./imgs/tools/libresprite_logo_normal.png" height="100" />
+                                <img src="./imgs/tools/libresprite_logo_normal.png" height="75" />
                                 <h2>LibreSprite</h2>
                             </a>
                         </div>
                         <div id="art-gimp" class="column">
                             <a href="https://www.gimp.org/">
-                                <img src="./imgs/tools/gimp_logo_white.png" height="100"/>
+                                <img src="./imgs/tools/gimp_logo_white.png" height="75"/>
                                 <h2>GIMP</h2>
                             </a>
                         </div>
@@ -92,7 +87,7 @@
                         <h1><a class="link" href="./definitions/index.html#launcher">Launcher Tools:</a></h1>
                         <div id="patchkit">
                             <a href="https://patchkit.net/">
-                                <img src="./imgs/tools/patchkit_logo_white.png" height="100" />
+                                <img src="./imgs/tools/patchkit_logo_white.png" height="75" />
                                 <h2>PatchKit</h2>
                             </a>
                         </div>
