Added Team Members

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="LonelyPie"/>
         <meta property="og:description" content="Homepage"/>
-        <meta property="og:url" content="https://paradox.andus.dev"/>
+        <meta property="og:url" content="https://lpie.andus.dev"/>
     </head>
 
     <body>
@@ -129,6 +129,6 @@
     <footer>
         <br><br>
         <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio/website">Website Source Code</a></h2>
-        <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio">GitHub</a></h2>
+        <h2 class="footer"><a class="link" href="https://discord.gg/Jc22Ty7trq">Discord</a> <a class="link" href="https://github.com/PrdxStudio">GitHub</a></h2>
     </footer>
 </html>
