--- a/team/index.html
+++ b/team/index.html
@@ -18,7 +18,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="LonelyPie"/>
         <meta property="og:description" content="Homepage"/>
-        <meta property="og:url" content="https://paradox.andus.dev"/>
+        <meta property="og:url" content="https://lpie.andus.dev"/>
     </head>
 
     <body>
@@ -37,16 +37,57 @@
             </div>
 
             <div id="team">
-                <div id="andus" class="teammember">
-                    <img src="/imgs/placeHolder.png"/>
-                    <h2>Andus</h2>
+                <h1 class="bigtext">Team:</h1>
+                <div class="row3">
+                    <div class="column3">
+                        <div id="andus" class="teammember">
+                            <img src="/imgs/placeHolder.png"/>
+                            <h2 class="teammember">Andus</h2>
+                            <h2 class="teamwork">Developer, Artist</h2>
+                        </div>
+                    </div>
+                    <div class="column3">
+                        <div id="lucepric" class="teammember">
+                            <img src="/imgs/placeHolder.png"/>
+                            <h2 class="teammember">LucePric</h2>
+                            <h2 class="teamwork">Story Writer</h2>
+                        </div>
+                    </div>
+                    <div class="column3">
+                        <div id="creta" class="teammember">
+                            <img src="/imgs/placeHolder.png"/>
+                            <h2 class="teammember">Creta</h2>
+                            <h2 class="teamwork">Translator</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="special">
+                <h1 class="bigtext">Special Thanks:</h1>
+                <div class="row">
+                    <div class="column">
+                        <div id="lucepric" class="teammember">
+                            <img src="/imgs/placeHolder.png"/>
+                            <h2 class="teammember">LucePric</h2>
+                            <h2 class="teamwork">Story Writer</h2>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div id="creta" class="teammember">
+                            <img src="/imgs/placeHolder.png"/>
+                            <h2 class="teammember">Creta</h2>
+                            <h2 class="teamwork">Translator</h2>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </body>
     <footer>
         <br><br>
-        <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio/website">Website Source Code</a></h2>
-        <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio">GitHub</a></h2>
+        <h2 class="footer"><a class="link" href="https://github.com/LnlyPie/website">Website Source Code</a></h2>
+        <h2 class="footer"><a class="link" href="https://discord.gg/Jc22Ty7trq">Discord</a></h2>
+        <h2 class="footer"><a class="link" href="https://github.com/LnlyPie">GitHub</a></h2>
     </footer>
 </html>
