--- a/team/index.html
+++ b/team/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>ParadoxStudio - Home</title>
+        <title>LonelyPie - Team</title>
         <link rel="stylesheet" href="/style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,21 +41,21 @@
                 <div class="row3">
                     <div class="column3">
                         <div id="andus" class="teammember">
-                            <img src="/imgs/placeHolder.png"/>
+                            <img class="center" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">Andus</h2>
                             <h2 class="teamwork">Developer, Artist</h2>
                         </div>
                     </div>
                     <div class="column3">
                         <div id="lucepric" class="teammember">
-                            <img src="/imgs/placeHolder.png"/>
+                            <img class="center" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">LucePric</h2>
                             <h2 class="teamwork">Story Writer</h2>
                         </div>
                     </div>
                     <div class="column3">
                         <div id="creta" class="teammember">
-                            <img src="/imgs/placeHolder.png"/>
+                            <img class="center" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">Creta</h2>
                             <h2 class="teamwork">Translator</h2>
                         </div>
