--- a/team/index.html
+++ b/team/index.html
@@ -41,21 +41,21 @@
                 <div class="row3">
                     <div class="column3">
                         <div id="andus" class="teammember">
-                            <img class="center" src="/imgs/placeHolder.png"/>
+                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">Andus</h2>
                             <h2 class="teamwork">Developer, Artist</h2>
                         </div>
                     </div>
                     <div class="column3">
                         <div id="lucepric" class="teammember">
-                            <img class="center" src="/imgs/placeHolder.png"/>
+                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">LucePric</h2>
                             <h2 class="teamwork">Story Writer</h2>
                         </div>
                     </div>
                     <div class="column3">
                         <div id="creta" class="teammember">
-                            <img class="center" src="/imgs/placeHolder.png"/>
+                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">Creta</h2>
                             <h2 class="teamwork">Translator</h2>
                         </div>
