--- a/team/index.html
+++ b/team/index.html
@@ -68,14 +68,14 @@
                 <div class="row">
                     <div class="column">
                         <div id="lucepric" class="teammember">
-                            <img src="/imgs/placeHolder.png"/>
+                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">LucePric</h2>
                             <h2 class="teamwork">Story Writer</h2>
                         </div>
                     </div>
                     <div class="column">
                         <div id="creta" class="teammember">
-                            <img src="/imgs/placeHolder.png"/>
+                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
                             <h2 class="teammember">Creta</h2>
                             <h2 class="teamwork">Translator</h2>
                         </div>
