--- a/team/index.html
+++ b/team/index.html
@@ -41,21 +41,27 @@
                 <div class="row3">
                     <div class="column3">
                         <div id="andus" class="teammember">
-                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
+                            <div style="text-align: center;">
+                                <img src="/imgs/placeHolder.png"/>
+                            </div>
                             <h2 class="teammember">Andus</h2>
                             <h2 class="teamwork">Developer, Artist</h2>
                         </div>
                     </div>
                     <div class="column3">
                         <div id="lucepric" class="teammember">
-                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
+                            <div style="text-align: center;">
+                                <img src="/imgs/placeHolder.png"/>
+                            </div>
                             <h2 class="teammember">LucePric</h2>
                             <h2 class="teamwork">Story Writer</h2>
                         </div>
                     </div>
                     <div class="column3">
                         <div id="creta" class="teammember">
-                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
+                            <div style="text-align: center;">
+                                <img src="/imgs/placeHolder.png"/>
+                            </div>
                             <h2 class="teammember">Creta</h2>
                             <h2 class="teamwork">Translator</h2>
                         </div>
@@ -68,14 +74,18 @@
                 <div class="row">
                     <div class="column">
                         <div id="lucepric" class="teammember">
-                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
+                            <div style="text-align: center;">
+                                <img src="/imgs/placeHolder.png"/>
+                            </div>
                             <h2 class="teammember">LucePric</h2>
                             <h2 class="teamwork">Story Writer</h2>
                         </div>
                     </div>
                     <div class="column">
                         <div id="creta" class="teammember">
-                            <img style="text-align: center;" src="/imgs/placeHolder.png"/>
+                            <div style="text-align: center;">
+                                <img src="/imgs/placeHolder.png"/>
+                            </div>
                             <h2 class="teammember">Creta</h2>
                             <h2 class="teamwork">Translator</h2>
                         </div>
