--- a/team/index.html
+++ b/team/index.html
@@ -96,8 +96,7 @@
     </body>
     <footer>
         <br><br>
-        <h2 class="footer"><a class="link" href="https://github.com/LnlyPie/website">Website Source Code</a></h2>
-        <h2 class="footer"><a class="link" href="https://discord.gg/Jc22Ty7trq">Discord</a></h2>
-        <h2 class="footer"><a class="link" href="https://github.com/LnlyPie">GitHub</a></h2>
+        <h2 class="footer"><a class="link" href="https://github.com/PrdxStudio/website">Website Source Code</a></h2>
+        <h2 class="footer"><a class="link" href="https://discord.gg/Jc22Ty7trq">Discord</a> <a class="link" href="https://github.com/PrdxStudio">GitHub</a></h2>
     </footer>
 </html>
