--- a/team/index.html
+++ b/team/index.html
@@ -23,8 +23,8 @@
 
     <body>
         <div class="nav">
-            <a class="active" href="/#main">Home</a>
-            <a href="/team">Team</a>
+            <a href="/#main">Home</a>
+            <a class="active" href="/team">Team</a>
         </div>
         <div class="main" id="main">
             <br><br>
