--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="main" id="main">
             <br><br>
             <div style="text-align: center;">
-                <a href="/"><img class="logo" src="imgs/Logo.png"></a>
+                <a href="/"><img class="logo" src="imgs/logo.png"></a>
             </div>
 
             <div id="hello">
