--- a/definitions/index.html
+++ b/definitions/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>ParadoxStudio - Home</title>
+        <title>LonelyPie -Definitions</title>
         <link rel="stylesheet" href="../style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
