--- a/index.html
+++ b/index.html
@@ -23,80 +23,57 @@
 
     <body>
         <div class="nav">
+            <a href="/"><img class="logo" src="imgs/logo.png"></a>
             <a class="active" href="/#main">Home</a>
             <a href="/team">Team</a>
         </div>
         <div class="main" id="main">
-            <br><br>
-            <div style="text-align: center;">
-                <a href="/"><img class="logo" src="imgs/logo.png"></a>
-            </div>
-
             <div id="hello">
-                <h1>Indie Game Studio</h1>
+                <h1 class="bigtext">LonelyPie</h1>
+                <h2>Average Indie Game Studio (just better)</h2>
             </div>
 
             <div id="ourgames">
-                <h1 class="bigtext">Our Games:</h1>
+                <h1>Our Games:</h1>
                 <div id="games" class="center">
                     <div class="game">
                         <a href="https://gamejolt.com/games/projectevie/699766">
                             <img class="game" src="imgs/Evie.png" alt="Project Evie">
                             <h4>Project Evie</h4>
+                            <p style="text-decoration: underline">(old logo)</p>
                         </a>
-                        <p>A great Platformer </br>with great story</p>
+                        <p>A top-down</br>adventure game</p>
                     </div>
                 </div>
             </div>
 
             <div id="tools">
-                <h1 class="bigtext">Tools we use:</h1>
-                <h2>We use tools you're already familliar with.</h2>
-                <div class="center">
-                    <div id="engines" class="row">
-                        <h1><a class="link" href="https://wikipedia.org/wiki/Game_engine">Engines:</a></h1>
-                        <div id="engine-godot" class="column">
-                            <a href="https://godotengine.org/">
-                                <img src="./imgs/tools/godot_logo_monochrome.svg" height="75"/>
-                                <h2>Godot</h2>
-                            </a>
-                        </div>
-                        <div id="engine-unity" class="column">
-                            <a href="https://unity.com/">
-                                <img src="./imgs/tools/unity_logo_white.svg" height="75"/>
-                                <h2>Unity</h2>
-                            </a>
-                        </div>
+                <h1>Tools we use:</h1>
+                <h2>We use tools you're already familliar with!</h2>
+                <div class="center row3">
+                    <div id="engine-godot" class="column3">
+                        <a href="https://godotengine.org/">
+                            <img src="./imgs/tools/godot_monochrome_logo.png" height="75"/>
+                            <h2>Godot</h2>
+                        </a>
                     </div>
-                    <div id="art" class="row">
-                        <h1><a class="link" href="https://en.wikipedia.org/wiki/Graphics_software">Art Tools:</a></h1>
-                        <div id="pixel-libresprite" class="column">
-                            <a href="https://libresprite.github.io/">
-                                <img src="./imgs/tools/libresprite_logo_normal.png" height="75" />
-                                <h2>LibreSprite</h2>
-                            </a>
-                        </div>
-                        <div id="art-gimp" class="column">
-                            <a href="https://www.gimp.org/">
-                                <img src="./imgs/tools/gimp_logo_white.png" height="75"/>
-                                <h2>GIMP</h2>
-                            </a>
-                        </div>
+                    <div id="art-libresprite" class="column3">
+                        <a href="https://libresprite.github.io/">
+                            <img src="./imgs/tools/libresprite_logo_normal.png" height="75" />
+                            <h2>LibreSprite</h2>
+                        </a>
                     </div>
-                    <div id="launcher">
-                        <h1><a class="link" href="./definitions/index.html#launcher">Launcher Tools:</a></h1>
-                        <div id="patchkit">
-                            <a href="https://patchkit.net/">
-                                <img src="./imgs/tools/patchkit_logo_white.png" height="75" />
-                                <h2>PatchKit</h2>
-                            </a>
-                        </div>
+                    <div id="patchkit" class="column3">
+                        <a href="https://patchkit.net/">
+                            <img src="./imgs/tools/patchkit_logo.png" height="75" />
+                            <h2>PatchKit</h2>
+                        </a>
                     </div>
                 </div>
             </div>
 
             <div id="reasonswhy">
-                <h1 class="bigtext">Why us?</h1>
+                <h1>Why us?</h1>
                 <div class="row3">
                     <!-- Our Games are (will be) Free -->
                     <div id="rfree" class="column3">
@@ -112,7 +89,7 @@
                             That means you can change in them anything you want.
                             Well... Anything that's legal.
                             Just follow the <a class="link" href="https://opensource.org/licenses">License</a> restrictions and you'll be fine.
-                            Most of our games use the <a class="link" href="https://choosealicense.com/licenses/mit/">MIT License</a>.</h2>
+                            Most of our games use the <a class="link" href="https://choosealicense.com/licenses/gpl-3.0/">GNU GPL v3 License</a>.</h2>
                     </div>
                     <!-- We're trying to build community -->
                     <div id="rcommunity" class="column3">
