--- a/team/index.html
+++ b/team/index.html
@@ -42,7 +42,7 @@
                     <div class="column3">
                         <div id="andus" class="teammember">
                             <div style="text-align: center;">
-                                <img src="/imgs/placeHolder.png"/>
+                                <img src="/imgs/team/AndusLogo.png"/>
                                 <h2 class="teammember">Andus</h2>
                                 <h2 class="teamwork">Developer, Artist</h2>
                             </div>
